syntax = "proto3";
package core;

option go_package = "Auth/internal/generated;generated";
option java_package = "books.java_main_service";

enum UserType {
  CLIENT = 0;
  ADMIN = 1;
}

message UserRequest {
  string login = 1;
  string password = 2;
}

message UserProfileWithTokens {
  int64 id = 1;
  string login = 2;
  UserType role = 3;
  string mail = 4;
  string phone = 5;
  string access_token = 7;
  string refresh_token = 8;
}
message UserProfile {
  int64 id = 1;
  string login = 2;
  UserType role = 3;
  string mail = 4;
  string phone = 5;
}
message UserAccessRequest {
  string accessToken = 2;
}
message UserProfileRequest {
  int64 id = 1;
}
message UserMainDataResponse {
  int64 id = 1;
  UserType role = 2;
}
message PasswordChange {
  int64 id = 1;
  string oldPassword = 2;
  string newPassword = 3;
}
message RefreshTokenRequest {
  string refresh_token = 1;
}

message AccessTokenResponse {
  string access_token = 1;
}
message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}


service Authentication {
  rpc AddUser(UserRequest) returns (UserProfileWithTokens);
  rpc Auth(UserRequest) returns (UserProfileWithTokens);
  rpc GetProfile(UserProfileRequest) returns (UserProfile);
  rpc GetMainData(UserAccessRequest) returns (UserMainDataResponse);
  rpc ChangeProfile(UserProfileWithTokens) returns (UserProfileWithTokens);
  rpc ChangePassword(PasswordChange) returns (TokenResponse);
  rpc RefreshAccessToken(RefreshTokenRequest) returns (AccessTokenResponse);
}
